@@ -1,3 +1,11 @@
+2011-01-19  Peter O'Gorman  <peter@pogma.com>
+
+	Don't let verbose linker messages influence test results.
+	* libltdl/m4/libtool.m4 (_LT_REQUIRED_DARWIN_CHECKS): Ignore
+	stderr during tests for -flag unless it contains "flag".
+	* tests/darwin.at: Add test.
+	Reported by Jeremy Huddleston and also by David Fang.
+
 2011-01-09  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>  (tiny change)
 
 	Fix relink mode to use absolute path if hardcode_minus_L.
